fix design (vertical align, text color, scroll)

--- a/src/documentation/styles.module.scss
+++ b/src/documentation/styles.module.scss
@@ -87,7 +87,7 @@
       width: inherit;
       max-width: inherit;
       overflow-y: visible;
-      max-height: 100vh;
+      max-height: calc(100vh - 200px);
     }
 
     > ul {
